# aoc2024

./: Cargo.toml  README.md
benches/: day1_bench.rs  day2_bench.rs  day3_bench.rs  day4_bench.rs
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day7.rs  lib.rs  main.rs  parsers.rs
