[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
atty = "0.2.14"
clap = { version = "4.5.21", features = ["derive"] }
rayon = "1.10.0"

[dev-dependencies]
criterion = { package = "codspeed-criterion-compat", version = "2.7" }

[[bench]]
name = "day1_bench"
harness = false
